@@ -4,6 +4,8 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.01o: *********************************
 
+IMP/MAN: (9/15/04, JKG) Added "File->Force Quit (and Save) " to kill Electric
+
 IMP: (9/14/04, SMR) Can now print waveform windows.
 
 IMP/MAN: (9/14/04, SMR) Added "Eagle", "Pads", and "ECAD" netlist output.
